--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </li>
 
         <li>
-          <a href="https://drive.google.com/file/d/1f9npxjRa3VggD2ZM2cr0easUb3teniH2/view?usp=sharing" target="_blank" rel="noopener">
+          <a href="https://drive.google.com/file/d/1CPM9tB7sPglFHfV2ggGH0UmAPiScO43o/view?usp=sharing" target="_blank" rel="noopener">
             <i class="ai ai-cv big-icon"></i>
           </a>
         </li>
@@ -119,7 +119,7 @@
               <div class="description">
                 <p class="title">Detection of eye contact with deep neural networks is as accurate as human experts</p>
                 <p class="authors"><u>Eunji Chong</u>, et. al.</p>
-                <p class="venue">Nature Communications (under revision) <span style="font-weight:bolder;color:#BB2222"></span></p>
+                <p class="venue">Nature Communications<span style="font-weight:bolder;color:#BB2222"></span></p>
                 <p class="resources">
                   [ <a href="https://nature-research-under-consideration.nature.com/posts/60730-detection-of-eye-contact-with-deep-neural-networks-is-as-accurate-as-human-experts" target="_blank" rel="noopener">paper</a> ]
                   [ <a href="https://github.com/ejcgt/eye-contact-cnn" target="_blank" rel="noopener">code</a> ]
