--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 
   <div class="col-12 col-lg-8">
-    <p> I am starting a new position at Amazon as Applied Scientist.
+    <p> I am working at Amazon as Applied Scientist.
       <br>
       I received my Ph.D. from the <a href="https://ic.gatech.edu/" target="_blank" rel="noopener">School of Interactive Computing</a>
       at <a href="https://gatech.edu" target="_blank" rel="noopener">Georgia Tech</a> in 2020,
