--- a/papers/natcommbib.html
+++ b/papers/natcommbib.html
@@ -1,15 +1,10 @@
-@article{Chong2020_EyeContact,
-  <br>&nbsp;
-  title = {Detection of eye contact with deep neural networks is as accurate as human experts},
-  <br>&nbsp;
-  url = {osf.io/5a6m7},
-  <br>&nbsp;
-  DOI = {10.31219/osf.io/5a6m7},
-  <br>&nbsp;
-  publisher = {OSF Preprints},
-  <br>&nbsp;
-  author = {Chong, Eunji and Clark-Whitney, Elysha and Southerland, Audrey and Stubbs, Elizabeth and Miller, Chanel and Ajodan, Eliana L and Silverman, Melanie R and Lord, Catherine and Rozga, Agata and Jones, Rebecca M and et al.},
-  <br>&nbsp;
-  year = {2020}
-  <br>
+@article{chong2020detection,
+  title={Detection of eye contact with deep neural networks is as accurate as human experts},
+  author={Chong, Eunji and Clark-Whitney, Elysha and Southerland, Audrey and Stubbs, Elizabeth and Miller, Chanel and Ajodan, Eliana L and Silverman, Melanie R and Lord, Catherine and Rozga, Agata and Jones, Rebecca M and others},
+  journal={Nature communications},
+  volume={11},
+  number={1},
+  pages={1--10},
+  year={2020},
+  publisher={Nature Publishing Group}
 }
