--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <p class="authors"><u>Eunji Chong</u>, et. al.</p>
                 <p class="venue">Nature Communications<span style="font-weight:bolder;color:#BB2222"></span></p>
                 <p class="resources">
-                  [ <a href="https://nature-research-under-consideration.nature.com/posts/60730-detection-of-eye-contact-with-deep-neural-networks-is-as-accurate-as-human-experts" target="_blank" rel="noopener">paper</a> ]
+                  [ <a href="https://www.nature.com/articles/s41467-020-19712-x" target="_blank" rel="noopener">paper</a> ]
                   [ <a href="https://github.com/ejcgt/eye-contact-cnn" target="_blank" rel="noopener">code</a> ]
                   [ <a href="papers/natcommbib.html" target="_blank" rel="noopener">bibtex</a> ]
                 </p>
