--- a/papers/natcommbib.html
+++ b/papers/natcommbib.html
@@ -1,10 +1,18 @@
 @article{chong2020detection,
+  <br>&nbsp;
   title={Detection of eye contact with deep neural networks is as accurate as human experts},
+  <br>&nbsp;
   author={Chong, Eunji and Clark-Whitney, Elysha and Southerland, Audrey and Stubbs, Elizabeth and Miller, Chanel and Ajodan, Eliana L and Silverman, Melanie R and Lord, Catherine and Rozga, Agata and Jones, Rebecca M and others},
   journal={Nature communications},
+  <br>&nbsp;
   volume={11},
+  <br>&nbsp;
   number={1},
+  <br>&nbsp;
   pages={1--10},
+  <br>&nbsp;
   year={2020},
+  <br>&nbsp;
   publisher={Nature Publishing Group}
+  <br>
 }
